--- a/packages.html
+++ b/packages.html
@@ -13,18 +13,18 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><img src="logo_.png" height="150px" width="200px"></a>
+    <a href="#" class="logo"><img src="images/logo_.png" height="150px" width="200px"></a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
     <nav class="navbar">
         <a href="home.html">home</a>
-        <a href="book.html">book</a>
-		    <a href="abt.html">about us</a>
+        <a href="home.html#about">about us</a>
+        <a href="home.html#review">review</a>
         <a href="packages.html">packages</a>
+      
         <a href="services.html">services</a>
-        <a href="gallery.html">gallery</a>
-        <a href="review.html">review</a>
-        <a href="contact.html">contact</a>
+        <a href="services.html#book">book</a>
+        <a href="services.html#review">contact</a>
     </nav>
 
     <div class="icons">
@@ -195,7 +195,7 @@ This 7 day Sydney itinerary has been created to offer you a great blend of iconi
 
     <div class="box-container" >
                <div class="box">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                   <img src="logo_.png" alt="logo" height="150px" width="200px" >
+                   <img src="images/logo_.png" alt="logo" height="150px" width="200px" >
                    <p style="font-family:gigi;font-size:15px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A page for <b>travel freaks</b></p>
                </div>
                <div class="box"> 
@@ -209,14 +209,14 @@ This 7 day Sydney itinerary has been created to offer you a great blend of iconi
                <div class="box">
                    <h3>Links <div class="underline"><span></span></div></h3>
                    <ul><br><br>
-                    <li><a href="home.html">Home</a></li>
-					<li><a href="book.html">Book</a></li>
-                    <li><a href="abt.html">About Us</a></li>
-					<li><a href="services.html">Services</a></li>
-                    <li><a href="packages.html">Packages</a></li>
-                    <li><a href="blog.html">Gallery</a></li>
-					<li><a href="review.html">Reviews</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <a href="home.html">home</a>
+                    <a href="home.html#about">about us</a>
+                    <a href="home.html#review">review</a>
+                    <a href="packages.html">packages</a>
+                    
+                    <a href="services.html">services</a>
+                    <a href="services.html#book">book</a>
+                    <a href="services.html#review">contact</a>
                    </ul>
                </div>
                <div class="box">
