--- a/home.html
+++ b/home.html
@@ -140,16 +140,17 @@
                 <div class="swiper-slide">
                     <div class="box">
                         <img src="images/pic1.png" alt="">
-                        <h3>jatin jain</h3>
+                        <h3>Vijay Mallya
+                        </h3>
                         <p><b>Satisfying Services</b><br>
                             I liked the website options and fully satisfied with the overall service of On That Road.
-                            
+                            <a href="https://twitter.com/thevijaymallya">VIJAY MALLYA TWITTER</a>
                             </p>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
                         </div>
                     </div>
