--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="style33.css">
 
 </head>
@@ -139,7 +140,7 @@
     
                 <div class="swiper-slide">
                     <div class="box">
-                        <img src="images/pic1.png" alt="">
+                        <img src="images/VM.JPG" alt="">
                         <h3>Vijay Mallya
                         </h3>
                         <p><b>Satisfying Services</b><br>
@@ -150,7 +151,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fa fa-star-half-full"></i>
                             <i class="far fa-star"></i>
                         </div>
                     </div>
